<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.LoginActivity">

    <ScrollView
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_marginTop="@dimen/twenty"
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/card_color_bg"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="bold" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/input_layout_margin"
                android:layout_marginTop="@dimen/input_layout_margin"
                android:layout_marginEnd="@dimen/input_layout_margin"
                android:hint="@string/hint_email"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:startIconDrawable="@drawable/ic_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilContrasenia"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/input_layout_margin"
                android:layout_marginTop="@dimen/input_layout_margin"
                android:layout_marginEnd="@dimen/input_layout_margin"
                android:hint="@string/hint_password"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="@dimen/sixteen"
                app:boxCornerRadiusBottomStart="@dimen/sixteen"
                app:boxCornerRadiusTopEnd="@dimen/sixteen"
                app:boxCornerRadiusTopStart="@dimen/sixteen"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietContrasenia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_button_height"
                android:layout_marginStart="@dimen/input_layout_margin"
                android:layout_marginTop="@dimen/input_layout_margin"
                android:layout_marginEnd="@dimen/input_layout_margin"
                android:backgroundTint="@color/card_color_bg"
                android:text="@string/btn_login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                app:cornerRadius="@dimen/sixteen" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegistrarse"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_button_height"
                android:layout_marginStart="@dimen/input_layout_margin"
                android:layout_marginTop="@dimen/input_layout_margin"
                android:layout_marginEnd="@dimen/input_layout_margin"
                android:backgroundTint="@color/main_bg"
                android:text="@string/btn_register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                app:cornerRadius="@dimen/sixteen" />

            <TextView
                android:id="@+id/tvRestablecerPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/input_layout_margin"
                android:layout_marginTop="@dimen/input_layout_margin"
                android:layout_marginEnd="@dimen/input_layout_margin"
                android:text="@string/forgot_password"
                android:textAlignment="center"
                android:textColor="@color/card_color_bg"
                android:textSize="@dimen/text_size_small" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_divider_height"
                android:layout_marginStart="@dimen/input_layout_margin"
                android:layout_marginTop="@dimen/input_layout_margin"
                android:layout_marginEnd="@dimen/input_layout_margin"
                android:layout_marginBottom="10dp"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/input_layout_margin"
                android:layout_marginEnd="@dimen/input_layout_margin"
                android:layout_marginBottom="@dimen/input_layout_margin"
                android:text="@string/copyright"
                android:textAlignment="center"
                android:textColor="@color/main_bg"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="@dimen/progress_bar_width"
        android:layout_height="@dimen/progress_bar_height"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
