<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    tools:context=".ui.fragments.GameDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu_bold"
                        android:gravity="center_horizontal"
                        android:paddingTop="@dimen/twenty"
                        android:paddingHorizontal="@dimen/general_padding_twelve"
                        android:paddingBottom="@dimen/general_padding_twelve"
                        android:textColor="@color/light_blue"
                        android:textSize="@dimen/title_size_clicked"
                        tools:text="@string/title" />

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/ivImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/general_padding_twelve"
                        app:riv_corner_radius="@dimen/image_radius"
                        tools:src="@mipmap/ic_launcher" />

                    <TextView
                        android:id="@+id/tvLongDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu"
                        android:padding="@dimen/general_padding_twelve"
                        android:textColor="@color/light_blue"
                        android:textSize="@dimen/txt_size"
                        tools:text="@string/long_description" />

                    <TextView
                        android:id="@+id/tvAdditionalDetail1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu"
                        android:padding="@dimen/general_padding_twelve"
                        android:textColor="@color/light_blue"
                        android:textSize="@dimen/txt_size"
                        tools:text="@string/additional_detail_one" />

                    <TextView
                        android:id="@+id/tvAdditionalDetail2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu"
                        android:padding="@dimen/general_padding_twelve"
                        android:textColor="@color/light_blue"
                        android:textSize="@dimen/txt_size"
                        tools:text="@string/additional_detail_two" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/ourWork"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_medium"
                        android:layout_marginTop="@dimen/sixteen"
                        android:layout_marginBottom="@dimen/general_padding_twelve"
                        />

                    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                        android:id="@+id/ytPlayerView"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/video_height"
                        android:layout_marginTop="@dimen/general_padding_twelve"
                        android:layout_marginBottom="@dimen/general_padding_twelve"
                        android:layout_gravity="center"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/location"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_medium"
                        android:layout_marginTop="@dimen/general_padding_twelve"
                        android:layout_marginBottom="@dimen/general_padding_twelve"
                        />

                    <fragment
                        android:id="@+id/map"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/video_height"
                        android:name="com.google.android.gms.maps.SupportMapFragment"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </LinearLayout>
            </ScrollView>

            <ProgressBar
                android:id="@+id/pbLoading"
                android:layout_width="@dimen/progress_bar_size"
                android:layout_height="@dimen/progress_bar_size"
                android:layout_centerInParent="true"
                android:indeterminateDrawable="@drawable/loading_anim"
                android:indeterminateDuration="1500"
                />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
