<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/eight">

    <!-- Single CardView containing all the content -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardAllContent"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/eight"
        android:backgroundTint="@color/card_color_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardElevation="@dimen/cardview_elevation">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/ivThumbnail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/cardview_height"
                android:layout_marginBottom="@dimen/eight"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingBottom="@dimen/eight"
                app:layout_constraintTop_toTopOf="@id/card"/>

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="@dimen/zero"
                android:padding="@dimen/eight"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/eight"
                android:fontFamily="@font/ubuntu_bold"
                android:textColor="@color/light_blue"
                android:textSize="@dimen/title_size"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/ivThumbnail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="@string/title" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eight"
                android:fontFamily="@font/ubuntu"
                android:textColor="@color/light_blue"
                android:padding="@dimen/eight"
                android:textSize="@dimen/txt_size"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="@string/card_description" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eight"
                android:padding="@dimen/eight"
                android:fontFamily="@font/ubuntu"
                android:textColor="@color/light_blue"
                android:textSize="@dimen/txt_size"
                app:layout_constraintTop_toBottomOf="@id/tvDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="@string/card_price" />

            <TextView
                android:id="@+id/tvDuration"
                android:layout_width="@dimen/zero"
                android:padding="@dimen/eight"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eight"
                android:fontFamily="@font/ubuntu"
                android:textColor="@color/light_blue"
                android:textSize="@dimen/txt_size"
                app:layout_constraintTop_toBottomOf="@id/tvPrice"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="@string/card_duration" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
